crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_memory_on_zero_results_clickbench_q43_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q43"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Limit: skip=1000, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |   Sort: date_trunc(Utf8("minute"), M) ASC NULLS LAST, fetch=1010                                                                                                                                                                                                                                                                                                                                                                         |
|               |     Projection: date_trunc(Utf8("minute"),to_timestamp(hits.EventTime)) AS M, count(*) AS PageViews                                                                                                                                                                                                                                                                                                                                      |
|               |       Aggregate: groupBy=[[date_trunc(Utf8("minute"), CAST(to_timestamp(hits.EventTime) AS Timestamp(Nanosecond, None)))]], aggr=[[count(Int64(1)) AS count(*)]]                                                                                                                                                                                                                                                                         |
|               |         Projection: hits.EventTime                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |           BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |             Filter: hits.CounterID = Int32(62) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1373760000000000000, None) AND to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1373846400000000000, None) AND hits.IsRefresh = Int16(0) AND hits.DontCountHits = Int16(0)                                                                                         |
|               |               TableScan: hits projection=[EventTime, EventDate, CounterID, IsRefresh, DontCountHits], partial_filters=[hits.CounterID = Int32(62), to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) >= TimestampNanosecond(1373760000000000000, None), to_timestamp(CAST(hits.EventDate AS Int64) * Int64(86400)) <= TimestampNanosecond(1373846400000000000, None), hits.IsRefresh = Int16(0), hits.DontCountHits = Int16(0)] |
| physical_plan | GlobalLimitExec: skip=1000, fetch=10                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |   SortExec: TopK(fetch=1010), expr=[date_trunc(minute, M@0) ASC NULLS LAST], preserve_partitioning=[false]                                                                                                                                                                                                                                                                                                                               |
|               |     CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |       ProjectionExec: expr=[date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))@0 as M, count(*)@1 as PageViews]                                                                                                                                                                                                                                                                                                                     |
|               |         AggregateExec: mode=FinalPartitioned, gby=[date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))@0 as date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))], aggr=[count(*)]                                                                                                                                                                                                                                                |
|               |           CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                    |
|               |             RepartitionExec: partitioning=Hash([date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))@0], 16), input_partitions=16                                                                                                                                                                                                                                                                                                     |
|               |               AggregateExec: mode=Partial, gby=[date_trunc(minute, to_timestamp(EventTime@0)) as date_trunc(Utf8("minute"),to_timestamp(hits.EventTime))], aggr=[count(*)]                                                                                                                                                                                                                                                               |
|               |                 ProjectionExec: expr=[EventTime@0 as EventTime]                                                                                                                                                                                                                                                                                                                                                                          |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |                     CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                          |
|               |                       FilterExec: CounterID@2 = 62 AND to_timestamp(CAST(EventDate@1 AS Int64) * 86400) >= 1373760000000000000 AND to_timestamp(CAST(EventDate@1 AS Int64) * 86400) <= 1373846400000000000 AND IsRefresh@3 = 0 AND DontCountHits@4 = 0                                                                                                                                                                                   |
|               |                         SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                               |
|               |                           RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                                                                                                                                                                                                                                                          |
|               |                             FallbackOnZeroResultsScanExec                                                                                                                                                                                                                                                                                                                                                                                |
|               |                               CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                     |
|               |                                 RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                                                                                                                                                                                                                                                    |
|               |                                   DuckSqlExec sql= SELECT "EventTime", "EventDate", "CounterID", "IsRefresh", "DontCountHits" FROM hits WHERE (CounterID = 62) AND (to_timestamp((CAST(EventDate AS BIGINT) * 86400)) >= CAST('2013-07-14 00:00:00' AS TIMESTAMP)) AND (to_timestamp((CAST(EventDate AS BIGINT) * 86400)) <= CAST('2013-07-15 00:00:00' AS TIMESTAMP)) AND (IsRefresh = 0) AND (DontCountHits = 0)                       |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
