crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_memory_on_zero_results_clickbench_q8_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q8"
---
+---------------+-------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: count(*) DESC NULLS FIRST                                                                       |
|               |   Aggregate: groupBy=[[hits.AdvEngineID]], aggr=[[count(Int64(1)) AS count(*)]]                       |
|               |     BytesProcessedNode                                                                                |
|               |       Filter: hits.AdvEngineID != Int16(0)                                                            |
|               |         TableScan: hits projection=[AdvEngineID], partial_filters=[hits.AdvEngineID != Int16(0)]      |
| physical_plan | SortExec: expr=[count(*)@1 DESC], preserve_partitioning=[false]                                       |
|               |   CoalescePartitionsExec                                                                              |
|               |     AggregateExec: mode=FinalPartitioned, gby=[AdvEngineID@0 as AdvEngineID], aggr=[count(*)]         |
|               |       CoalesceBatchesExec: target_batch_size=8192                                                     |
|               |         RepartitionExec: partitioning=Hash([AdvEngineID@0], 24), input_partitions=24                  |
|               |           AggregateExec: mode=Partial, gby=[AdvEngineID@0 as AdvEngineID], aggr=[count(*)]            |
|               |             BytesProcessedExec                                                                        |
|               |               CoalesceBatchesExec: target_batch_size=8192                                             |
|               |                 FilterExec: AdvEngineID@0 != 0                                                        |
|               |                   SchemaCastScanExec                                                                  |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1             |
|               |                       FallbackOnZeroResultsScanExec                                                   |
|               |                         CoalescePartitionsExec                                                        |
|               |                           RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1       |
|               |                             DuckSqlExec sql= SELECT "AdvEngineID" FROM hits WHERE (AdvEngineID <> 0)  |
|               |                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------+
