crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_memory_on_zero_results_clickbench_q9_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q9"
---
+---------------+---------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                          |
+---------------+---------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: u DESC NULLS FIRST, fetch=10                                                                            |
|               |   Projection: hits.RegionID, count(alias1) AS u                                                               |
|               |     Aggregate: groupBy=[[hits.RegionID]], aggr=[[count(alias1)]]                                              |
|               |       Aggregate: groupBy=[[hits.RegionID, hits.UserID AS alias1]], aggr=[[]]                                  |
|               |         BytesProcessedNode                                                                                    |
|               |           TableScan: hits projection=[RegionID, UserID]                                                       |
| physical_plan | SortExec: TopK(fetch=10), expr=[u@1 DESC], preserve_partitioning=[false]                                      |
|               |   CoalescePartitionsExec                                                                                      |
|               |     ProjectionExec: expr=[RegionID@0 as RegionID, count(alias1)@1 as u]                                       |
|               |       AggregateExec: mode=FinalPartitioned, gby=[RegionID@0 as RegionID], aggr=[count(alias1)]                |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                           |
|               |           RepartitionExec: partitioning=Hash([RegionID@0], 24), input_partitions=24                           |
|               |             AggregateExec: mode=Partial, gby=[RegionID@0 as RegionID], aggr=[count(alias1)]                   |
|               |               AggregateExec: mode=FinalPartitioned, gby=[RegionID@0 as RegionID, alias1@1 as alias1], aggr=[] |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                   |
|               |                   RepartitionExec: partitioning=Hash([RegionID@0, alias1@1], 24), input_partitions=24         |
|               |                     AggregateExec: mode=Partial, gby=[RegionID@0 as RegionID, UserID@1 as alias1], aggr=[]    |
|               |                       BytesProcessedExec                                                                      |
|               |                         SchemaCastScanExec                                                                    |
|               |                           RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1               |
|               |                             FallbackOnZeroResultsScanExec                                                     |
|               |                               CoalescePartitionsExec                                                          |
|               |                                 RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1         |
|               |                                   DuckSqlExec sql= SELECT "RegionID", "UserID" FROM hits                      |
|               |                                                                                                               |
+---------------+---------------------------------------------------------------------------------------------------------------+
